--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,10 +19,15 @@ android {
     }
 
     buildTypes {
+        debug {
+            buildConfigField 'String', 'IMDB_API_KEY', IMDB_API_KEY
+        }
+
         release {
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField 'String', 'IMDB_API_KEY', IMDB_API_KEY
         }
     }
     compileOptions {
@@ -45,6 +50,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation "androidx.fragment:fragment-ktx:1.2.5"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
     //moxy
     implementation "com.github.moxy-community:moxy:2.1.2"
