--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,4 +97,11 @@ dependencies {
     implementation "org.koin:koin-android:2.2.2"
     implementation "org.koin:koin-android-scope:2.2.2"
     implementation "org.koin:koin-android-ext:2.2.2"
+
+    //room
+    def room_version = "2.3.0"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 }
